--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
 Flask==0.9
+Flask-Login==0.1.3
+Flask-Mail==0.7.3
+Flask-Principal==0.3.3
 Flask-SQLAlchemy==0.16
+Flask-Security==1.5.0
+Flask-WTF==0.8
 Jinja2==2.6
 SQLAlchemy==0.7.9
+WTForms==1.0.2
 Werkzeug==0.8.3
+blinker==1.2
+distribute==0.6.30
+itsdangerous==0.17
+passlib==1.6.1
